--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,9 +1,28 @@
+@import 'styles/mixins';
+
 .container {
-    max-width: 1080px;
-    margin: 0 auto;
-    padding: 0 12px;
+    max-width: 1200px;
+    margin: 24px auto;
+    border-radius: 40px;
+    padding: 0 64px;
     width: 100%;
     height: 100%;
-    
+    transition: all 0.2s ease;
+    min-height: calc(100vh - 48px);
+    position: relative;
+    overflow: hidden;
 
+
+    @include flex-display();
+    @include flex-direction(column);
+    @include justify-content(center);
+
+    box-shadow: 7px 7px 16px #bababa, -7px -7px 16px #ffffff, inset 0px 0px 0px #bababa, inset 0px 0px 0px #ffffff;
+
+    @include tablet {
+        margin: 0 auto;
+        border-radius: 0;
+        min-height: 100vh;
+        padding: 0 24px;
+    }
 }
