--- a/src/pages/Portfolio/Portfolio.scss
+++ b/src/pages/Portfolio/Portfolio.scss
@@ -8,18 +8,10 @@
         height: 100%;
         @include flex-display();
         @include flex-direction(row);
-        margin-top: -200px;
-        // padding-top: 24px;
+        // margin-top: -200px;
 
         .preview {
-            // center
-            // @include flex-display();
-            // @include flex-direction(column);
-            // @include justify-content(center);
-            // @include align-items(center);
             width: 100%;
-            // height: 100%;
-            // position: absolute;
             position: relative;
             padding-left: 24px;
 
@@ -45,7 +37,6 @@
                     max-width: 100%;
                     border-radius: 30px;
                     box-shadow: 7px 7px 16px #747474, -7px -7px 16px #ffffff;
-                    // object-fit: contain;
                     max-height: 300px;
                 }
 
@@ -73,12 +64,11 @@
             width: 100%;
             height: 100%;
             overflow-y: auto;
-            // overflow-x: hidden;
             padding: 24px;
             position: relative;
             z-index: 1;
             min-height: 128px;
-            max-height: 400px;
+            max-height: 600px;
 
             &::-webkit-scrollbar {
                 width: 5px;
@@ -100,23 +90,10 @@
 
 
             button {
-                @include rem(font-size, 14);
-                @include rem(line-height, 32);
-                text-transform: uppercase;
-                letter-spacing: 0.1rem;
-                cursor: pointer;
-                width: 100%;
-                transition: all 0.2s ease;
-                -webkit-tap-highlight-color: transparent;
-                -webkit-touch-callout: none;
-                -webkit-user-select: none;
-                -khtml-user-select: none;
-                -moz-user-select: none;
-                -ms-user-select: none;
-                user-select: none;
+                @include rem(font-size, 18);
+                @include rem(line-height, 24);
                 margin: 8px 0;
-                background: none;
-                color: black;
+                width: 100%;
             }
         }
     }
@@ -138,8 +115,6 @@
                 padding: 0;
 
                 .section {
-                    // position: relative;
-
                     transform: translate(100%, -25%);
 
                     &.active {
