--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -1,4 +1,5 @@
 @import 'styles/mixins';
+
 .contact {
     .content {
         text-align: center;
@@ -17,6 +18,26 @@
             height: 64px;
             width: 64px;
             margin: 12px 12px;
+        }
+
+        a {
+            text-decoration: none;
+
+        }
+    }
+
+    @include mobile {
+        .content {
+            button {
+                margin: 24px 8px;
+                padding: 8px;
+            }
+
+            svg {
+                height: 48px;
+                width: 48px;
+                margin: 8px 8px;
+            }
         }
     }
 }
